fix: adjust time slot height and label positioning for better alignment

--- a/_croucher/_calendar.scss
+++ b/_croucher/_calendar.scss
@@ -418,7 +418,7 @@
   }
 
   .time_slot.empty_slot {
-    height: 20px;
+    height: 35px;
   }
 
   .time_slot:last-child {
@@ -430,7 +430,7 @@
   .time_label {
     position: absolute;
     right: 8px;
-    top: 5px;
+    top: -8px;
     text-align: right;
     background-color: white;
     padding: 0 4px 0 0;
@@ -869,14 +869,6 @@
     .day_event_grid,
     .day_column {
       min-height: auto;
-    }
-
-    .time_column .time_slot:last-child {
-      display: none;
-    }
-
-    .time_slot.empty_slot {
-      height: 35px;
     }
 
     .month_event {
